@@ -18,15 +18,14 @@
 package org.apache.tomee.installer;
 
 import org.apache.openejb.loader.IO;
+import org.apache.openejb.loader.Options;
 import org.apache.openejb.loader.SystemInstance;
 
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
-import java.lang.reflect.Method;
 import java.util.Arrays;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.jar.JarFile;
 import java.util.zip.ZipEntry;
@@ -36,21 +35,21 @@ import java.util.zip.ZipOutputStream;
 public class Installer {
     private final Alerts alerts = new Alerts();
 
-    public enum Status {
-        NONE, INSTALLED, REBOOT_REQUIRED
-    }
+    private final Paths paths;
+    private Status status = Status.NONE;
+    private boolean force = false;
 
     private static final boolean listenerInstalled;
     private static final boolean agentInstalled;
-
-    private boolean force = false;
-
     static {
+        final Options opts = SystemInstance.get().getOptions();
         // is the OpenEJB listener installed
-        listenerInstalled = "OpenEJBListener".equals(SystemInstance.get().getOptions().get("openejb.embedder.source", "")) ||  "ServerListener".equals(SystemInstance.get().getOptions().get("openejb.embedder.source", ""));
+        listenerInstalled = "OpenEJBListener".equals(opts.get("openejb.embedder.source", ""))
+                || "ServerListener".equals(opts.get("openejb.embedder.source", ""));
 
         // is the OpenEJB javaagent installed
-        agentInstalled = invokeStaticNoArgMethod("org.apache.openejb.javaagent.Agent", "getInstrumentation") != null;
+        agentInstalled = InstallerTools.invokeStaticNoArgMethod(
+                "org.apache.openejb.javaagent.Agent", "getInstrumentation") != null;
     }
 
     public static boolean isListenerInstalled() {
@@ -61,9 +60,6 @@ public class Installer {
         return agentInstalled;
     }
 
-    private final Paths paths;
-    private Status status = Status.NONE;
-
     public Installer(Paths paths) {
         this.paths = paths;
 
@@ -73,15 +69,14 @@ public class Installer {
     }
 
     public Installer(Paths paths, boolean force) {
-        this (paths);
+        this(paths);
         this.force = force;
     }
-
 
     public Alerts getAlerts() {
         return alerts;
     }
-    
+
     public void reset() {
         alerts.reset();
     }
@@ -92,9 +87,7 @@ public class Installer {
 
     public void installAll() {
         installListener();
-
         installJavaagent();
-
         installConfigFiles();
 
         removeTomcatLibJar("annotations-api.jar");
@@ -102,7 +95,6 @@ public class Installer {
         addJavaeeInEndorsed();
 
         addTomEEAdminConfInTomcatUsers();
-
         addTomEELinkToTomcatHome();
 
         if (!alerts.hasErrors()) {
@@ -136,20 +128,20 @@ public class Installer {
         // add our listener
         final String roleUserTags =
                 "  <role rolename=\"tomee-admin\" />\n" +
-                "  <user username=\"tomee\" password=\"tomee\" roles=\"tomee-admin,manager-gui\" />\n";
-        String content = null;
+                        "  <user username=\"tomee\" password=\"tomee\" roles=\"tomee-admin,manager-gui\" />\n";
+        final String content;
         if (!securityActivated) {
             content =
-                "  <!-- Activate those lines to get access to TomEE GUI -->\n" +
-                "  <!--\n" +
-                roleUserTags +
-                "  -->\n" +
-                "</tomcat-users>\n";
+                    "  <!-- Activate those lines to get access to TomEE GUI -->\n" +
+                            "  <!--\n" +
+                            roleUserTags +
+                            "  -->\n" +
+                            "</tomcat-users>\n";
         } else {
             content =
-                "  <!-- Activate those lines to get access to TomEE GUI\n -->" +
-                roleUserTags +
-                "</tomcat-users>\n";
+                    "  <!-- Activate those lines to get access to TomEE GUI\n -->" +
+                            roleUserTags +
+                            "</tomcat-users>\n";
 
         }
         final String newTomcatUsers = tomcatUsersXml.replace("</tomcat-users>", content);
@@ -162,7 +154,6 @@ public class Installer {
 
     public void installFull() {
         installListener("org.apache.tomee.catalina.ServerListener");
-
         installJavaagent();
 
         commentDeploymentDir();
@@ -174,7 +165,6 @@ public class Installer {
         moveLibs();
 
         addTomEEAdminConfInTomcatUsers();
-
         addTomEELinkToTomcatHome();
 
         if (!alerts.hasErrors()) {
@@ -186,12 +176,12 @@ public class Installer {
         final File tomeeXml = new File(paths.getCatalinaConfDir(), "tomee.xml");
         if (!tomeeXml.exists()) {
             Installers.writeAll(tomeeXml,
-                "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
-                "<tomee>\n" +
-                "  <!-- see http://tomee.apache.org/containers-and-resources.html -->\n\n" +
-                "  <!-- activate next line to be able to deploy applications in apps -->\n" +
-                "  <!-- <Deployments dir=\"apps\" /> -->\n" +
-                "</tomee>\n", alerts);
+                    "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
+                            "<tomee>\n" +
+                            "  <!-- see http://tomee.apache.org/containers-and-resources.html -->\n\n" +
+                            "  <!-- activate next line to be able to deploy applications in apps -->\n" +
+                            "  <!-- <Deployments dir=\"apps\" /> -->\n" +
+                            "</tomee>\n", alerts);
         }
     }
 
@@ -209,14 +199,13 @@ public class Installer {
 
         final String newIndeJsp = indeJsp.replaceFirst("<div id=\"actions\">",
                 "<div id=\\\"actions\\\">\r\n" +
-                "                    <div class=\"button\">\n" +
-                "                        <a class=\"container shadow\" href=\"/tomee\"><span>TomEE Gui</span></a>\n" +
-                "                    </div>");
+                        "                    <div class=\"button\">\n" +
+                        "                        <a class=\"container shadow\" href=\"/tomee\"><span>TomEE Gui</span></a>\n" +
+                        "                    </div>");
         Installers.writeAll(home, newIndeJsp, alerts);
     }
 
     private void moveLibs() {
-
         final File libs = paths.getCatalinaLibDir();
         final File[] files = paths.getOpenEJBLibDir().listFiles();
         if (files != null) {
@@ -226,29 +215,29 @@ public class Installer {
 
                 try {
                     Installers.copyFile(file, new File(libs, file.getName()));
-                    if(!file.delete()){
+                    if (!file.delete()) {
                         file.deleteOnExit();
                     }
                     alerts.addInfo("Copy " + file.getName() + " to lib");
                 } catch (IOException e) {
-                    alerts.addError("Unable to " + file.getName() + " to Tomcat lib directory.  This will need to be performed manually.", e);
+                    alerts.addError("Unable to " + file.getName() + " to Tomcat lib directory.  This will need to be " +
+                            "performed manually.", e);
                 }
             }
         }
     }
 
     private void addJavaeeInEndorsed() {
-
         File endorsed = new File(paths.getCatalinaHomeDir(), "endorsed");
         if (!endorsed.mkdir()) {
             alerts.addWarning("can't create endorsed directory");
         }
 
-
         copyClasses(paths.getJavaEEAPIJar(), new File(endorsed, "annotation-api.jar"), "javax/annotation/.*");
 
         final File jaxbApi = paths.findOpenEJBJar("geronimo-jaxb_2.2_spec");
-        copyClasses(paths.getJavaEEAPIJar(), jaxbApi, new File(endorsed, "jaxb-api.jar"), "javax/xml/bind/.*", Arrays.asList("javax/xml/bind/ContextFinder.class", "javax/xml/bind/DatatypeConverter.class"));
+        copyClasses(paths.getJavaEEAPIJar(), jaxbApi, new File(endorsed, "jaxb-api.jar"), "javax/xml/bind/.*",
+                Arrays.asList("javax/xml/bind/ContextFinder.class", "javax/xml/bind/DatatypeConverter.class"));
         removeJar(jaxbApi);
 
         // don't put jaxb-impl in endorsed since it relies on the jvm itself
@@ -260,57 +249,10 @@ public class Installer {
                 alerts.addError("can't copy " + paths.getJAXBImpl().getPath() + " to " + endorsed.getPath() + "/jaxb-impl.jar");
             }
         }
-
-        /* no more needed with the last upgrade of jaxb
-        String setClasspathSh = Installers.readAll(paths.getSetClasspathSh(), alerts);
-        if (setClasspathSh != null && !setClasspathSh.contains("any endorsed lib for java 7")) {
-            if (Installers.backup(paths.getSetClasspathSh(), alerts)) {
-                // add our magic bits to the catalina sh file
-                final String newSetClasspathSh = setClasspathSh.replace("JAVA_ENDORSED_DIRS=\"$CATALINA_HOME\"/endorsed",
-                        "# Don't override the endorsed dir if the user has set it previously\n" +
-                        "if [ -z \"$JAVA_ENDORSED_DIRS\" ]; then\n" +
-                        "  # Set the default -Djava.endorsed.dirs argument\n" +
-                        "  JAVA_ENDORSED_DIRS=\"$CATALINA_HOME\"/endorsed\n" +
-                        "  java_version=`$JRE_HOME/bin/java -version 2>&1 | grep version`\n" +
-                        "  case \"$java_version\" in \n" +
-                        "    *1.7*)\n" +
-                        "      JAVA_ENDORSED_DIRS=\"$CATALINA_HOME\"/endorsed7\n" +
-                        "    ;;\n" +
-                        "  esac\n" +
-                        "fi\n");
-                if (Installers.writeAll(paths.getSetClasspathSh(), newSetClasspathSh, alerts)) {
-                    alerts.addInfo("Endorsed lib set for java 6 and ignored for java 7 (unix)");
-                }
-            }
-        }
-
-        String setClasspathBat = Installers.readAll(paths.getSetClasspathBat(), alerts);
-        if (setClasspathBat != null && !setClasspathBat.contains("any endorsed lib for java 7")) {
-            if (Installers.backup(paths.getSetClasspathBat(), alerts)) {
-                // add our magic bits to the catalina bat file
-                // note how windows is not adapted to scripting
-                final String newSetClasspathBat = setClasspathBat.replace("set \"JAVA_ENDORSED_DIRS=%CATALINA_HOME%\\endorsed\"",
-                        "\nrem Set the default -Djava.endorsed.dirs argument\n" +
-                        "rem easier way to get java version in bat is to dump the version in a file\n" +
-                        "set JAVA_VERSION_FILE=%CATALINA_HOME%\\tmp_java_version.txt\n" +
-                        "\"%JRE_HOME%\\bin\\java\" -version 2> %JAVA_VERSION_FILE%\n" +
-                        "set /p JAVA_VERSION= < %JAVA_VERSION_FILE%\n" +
-                        "del %JAVA_VERSION_FILE%\n" +
-                        "rem extract minor version\n" +
-                        "set JAVA_VERSION=%JAVA_VERSION:~16,1%\n" +
-                        "\n" +
-                        "rem adjust endorsed lib depending on the java version\n" +
-                        "set JAVA_ENDORSED_DIRS=endorsed\n" +
-                        "if \"%JAVA_VERSION%\" == \"7\" set JAVA_ENDORSED_DIRS=\"%CATALINA_HOME%\"\\endorsed7\n");
-                if (Installers.writeAll(paths.getSetClasspathBat(), newSetClasspathBat, alerts)) {
-                    alerts.addInfo("Endorsed lib set for java 6 and ignored for java 7 (win)");
-                }
-            }
-        }
-        */
     }
 
-    private void copyClasses(final File javaEEAPIJar, final File sourceJar, final File destinationJar, final String pattern, final List<String> exceptions) {
+    private void copyClasses(final File javaEEAPIJar, final File sourceJar, final File destinationJar,
+                             final String pattern, final List<String> exceptions) {
         if (javaEEAPIJar == null) throw new NullPointerException("javaEEAPIJar");
         if (sourceJar == null) throw new NullPointerException("sourceJar");
         if (destinationJar == null) throw new NullPointerException("destinationJar");
@@ -320,23 +262,18 @@ public class Installer {
         if (destinationJar.exists()) return;
 
         try {
-
             final ByteArrayOutputStream destinationBuffer = new ByteArrayOutputStream(524288);
             final ZipOutputStream destination = new ZipOutputStream(destinationBuffer);
-
             final ZipInputStream source = new ZipInputStream(IO.read(sourceJar));
             for (ZipEntry entry; (entry = source.getNextEntry()) != null; ) {
                 final String entryName = entry.getName();
                 if (!entryName.matches(pattern) || exceptions.contains(entryName)) {
                     continue;
                 }
-
                 destination.putNextEntry(new ZipEntry(entryName));
-
                 IO.copy(source, destination);
             }
             IO.close(source);
-
             final ZipInputStream source2 = new ZipInputStream(IO.read(javaEEAPIJar));
             for (ZipEntry entry; (entry = source2.getNextEntry()) != null; ) {
                 final String entryName = entry.getName();
@@ -349,9 +286,7 @@ public class Installer {
                 IO.copy(source2, destination);
             }
             IO.close(source2);
-
             IO.close(destination);
-
             IO.copy(destinationBuffer.toByteArray(), destinationJar);
         } catch (IOException e) {
             alerts.addError(e.getMessage());
@@ -366,25 +301,17 @@ public class Installer {
         if (destinationJar.exists()) return;
 
         try {
-
             final ZipInputStream source = new ZipInputStream(IO.read(sourceJar));
-
             final ByteArrayOutputStream destinationBuffer = new ByteArrayOutputStream(524288);
             final ZipOutputStream destination = new ZipOutputStream(destinationBuffer);
-
             for (ZipEntry entry; (entry = source.getNextEntry()) != null; ) {
                 String entryName = entry.getName();
-
                 if (!entryName.matches(pattern)) continue;
-
                 destination.putNextEntry(new ZipEntry(entryName));
-
                 IO.copy(source, destination);
             }
-
             IO.close(source);
             IO.close(destination);
-
             IO.copy(destinationBuffer.toByteArray(), destinationJar);
         } catch (IOException e) {
             alerts.addError(e.getMessage());
@@ -411,23 +338,18 @@ public class Installer {
 
     public void installListener(final String listener) {
         if (listenerInstalled && !force) {
-//            addInfo("OpenEJB Listener already installed");
+            // OpenEJB Listener already installed
             return;
         }
-
         boolean copyOpenEJBLoader = true;
 
         // copy loader jar to lib
         File destination = new File(paths.getCatalinaLibDir(), paths.getOpenEJBTomcatLoaderJar().getName());
         if (destination.exists()) {
-            if (paths.getOpenEJBTomcatLoaderJar().length() != destination.length()) {
-                // md5 diff the files
-            } else {
-//                addInfo("OpenEJB loader jar already installed in Tomcat lib directory.");
+            if (paths.getOpenEJBTomcatLoaderJar().length() == destination.length()) {
                 copyOpenEJBLoader = false;
             }
         }
-
         if (copyOpenEJBLoader) {
             try {
                 Installers.copyFile(paths.getOpenEJBTomcatLoaderJar(), destination);
@@ -482,7 +404,7 @@ public class Installer {
     //       because it needs some OSGi API we don't want to add
     public void installJavaagent() {
         if (agentInstalled && !force) {
-//            addInfo("OpenEJB Agent already installed");
+            // OpenEJB Agent already installed"
             return;
         }
 
@@ -492,10 +414,7 @@ public class Installer {
         boolean copyJavaagentJar = true;
         File javaagentJar = new File(paths.getCatalinaLibDir(), "openejb-javaagent.jar");
         if (javaagentJar.exists()) {
-            if (paths.getOpenEJBJavaagentJar().length() != javaagentJar.length()) {
-                // md5 diff the files
-            } else {
-//                addInfo("OpenEJB javaagent jar already installed in Tomcat lib directory.");
+            if (paths.getOpenEJBJavaagentJar().length() == javaagentJar.length()) {
                 copyJavaagentJar = false;
             }
         }
@@ -537,15 +456,27 @@ public class Installer {
         String openejbJavaagentPath = paths.getCatalinaHomeDir().toURI().relativize(javaagentJar.toURI()).getPath();
         String newCatalinaSh = catalinaShOriginal.replace("# ----- Execute The Requested Command",
                 "# Add OpenEJB javaagent\n" +
-                "if [ -r \"$CATALINA_HOME\"/" + openejbJavaagentPath + " ]; then\n" +
-                "  JAVA_OPTS=\"\"-javaagent:$CATALINA_HOME/" + openejbJavaagentPath + "\" $JAVA_OPTS\"\n" +
-                "fi\n" +
-                "\n" +
-                "# ----- Execute The Requested Command");
+                        "if [ -r \"$CATALINA_HOME\"/" + openejbJavaagentPath + " ]; then\n" +
+                        "  JAVA_OPTS=\"\"-javaagent:$CATALINA_HOME/" + openejbJavaagentPath + "\" $JAVA_OPTS\"\n" +
+                        "fi\n" +
+                        "\n" +
+                        "# ----- Execute The Requested Command");
 
         // overwrite the catalina.sh file
         if (Installers.writeAll(paths.getCatalinaShFile(), newCatalinaSh, alerts)) {
             alerts.addInfo("Add OpenEJB JavaAgent to catalina.sh");
+        }
+
+        boolean isCatalinaShExecutable = paths.getCatalinaShFile().canExecute();
+        if(!isCatalinaShExecutable) {
+            try {
+                isCatalinaShExecutable = paths.getCatalinaShFile().setExecutable(true);
+            } catch (SecurityException e) {
+                alerts.addWarning("Cannot change CatalinaSh executable attribute.");
+            }
+        }
+        if(!isCatalinaShExecutable) {
+            alerts.addWarning("CatalinaSh is not executable.");
         }
 
         //
@@ -575,17 +506,18 @@ public class Installer {
         openejbJavaagentPath = openejbJavaagentPath.replace('/', '\\');
         String newCatalinaBat = catalinaBatOriginal.replace("rem ----- Execute The Requested Command",
                 "rem Add OpenEJB javaagent\r\n" +
-                "if not exist \"%CATALINA_HOME%\\" + openejbJavaagentPath + "\" goto noOpenEJBJavaagent\r\n" +
-                "set JAVA_OPTS=\"-javaagent:%CATALINA_HOME%\\" + openejbJavaagentPath + "\" %JAVA_OPTS%\r\n" +
-                ":noOpenEJBJavaagent\r\n" +
-                "\r\n" +
-                "rem ----- Execute The Requested Command");
+                        "if not exist \"%CATALINA_HOME%\\" + openejbJavaagentPath + "\" goto noOpenEJBJavaagent\r\n" +
+                        "set JAVA_OPTS=\"-javaagent:%CATALINA_HOME%\\" + openejbJavaagentPath + "\" %JAVA_OPTS%\r\n" +
+                        ":noOpenEJBJavaagent\r\n" +
+                        "\r\n" +
+                        "rem ----- Execute The Requested Command");
 
         // overwrite the catalina.bat file
         if (Installers.writeAll(paths.getCatalinaBatFile(), newCatalinaBat, alerts)) {
             alerts.addInfo("Add OpenEJB JavaAgent to catalina.bat");
         }
     }
+
     /**
      * Installs conf/tomee.xml and conf/logging.properties files.
      * This method retrieves the tomee.xml and logging.properties files
@@ -618,7 +550,6 @@ public class Installer {
         //
         // conf/tomee.xml
         //
-
         File openEjbXmlFile = new File(confDir, "tomee.xml");
         if (!openEjbXmlFile.exists()) {
             // read in the openejb.xml file from the openejb core jar
@@ -634,35 +565,77 @@ public class Installer {
         //
         // conf/logging.properties
         // now we are using tomcat one of jdk one by default
-        // this test should always fail
         //
-        String openejbLoggingProps = Installers.readEntry(coreJar, "logging.properties", alerts);
-        if (openejbLoggingProps != null) {
-            File loggingPropsFile = new File(confDir, "logging.properties");
-            String newLoggingProps = null;
-            if (!loggingPropsFile.exists()) {
-                newLoggingProps = openejbLoggingProps;
-            } else {
-                String loggingPropsOriginal = Installers.readAll(loggingPropsFile, alerts);
-                if (!loggingPropsOriginal.toLowerCase().contains("openejb")) {
-                    // strip off license header
-                    String[] strings = openejbLoggingProps.split("## --*", 3);
-                    if (strings.length == 3) {
-                        openejbLoggingProps = strings[2];
-                    }
-                    // append our properties
-                    newLoggingProps = loggingPropsOriginal +
-                            "\r\n" +
-                            "############################################################\r\n" +
-                            "# OpenEJB Logging Configuration.\r\n" +
-                            "############################################################\r\n" +
-                            openejbLoggingProps + "\r\n";
-                }
+        final String openejbLoggingProps = "################################\r\n" +
+                "# OpenEJB/TomEE specific loggers\r\n" +
+                "################################\r\n" +
+                "#\r\n" +
+                "# ACTIVATE LEVEL/HANDLERS YOU WANT\r\n" +
+                "# IF YOU ACTIVATE 5tomee.org.apache.juli.FileHandler\r\n" +
+                "# ADD IT TO handlers LINE LIKE:\r\n" +
+                "#\r\n" +
+                "# handlers = 1catalina.org.apache.juli.FileHandler, 2localhost.org.apache.juli.FileHandler, 3manager.org.apache.juli.FileHandler, 4host-manager.org.apache.juli.FileHandler, 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "#\r\n" +
+                "# LEVELS:\r\n" +
+                "# =======\r\n" +
+                "#\r\n" +
+                "# OpenEJB.level             = WARNING\r\n" +
+                "# OpenEJB.options.level     = INFO\r\n" +
+                "# OpenEJB.server.level      = INFO\r\n" +
+                "# OpenEJB.startup.level     = INFO\r\n" +
+                "# OpenEJB.startup.service.level = WARNING\r\n" +
+                "# OpenEJB.startup.config.level = INFO\r\n" +
+                "# OpenEJB.hsql.level        = INFO\r\n" +
+                "# CORBA-Adapter.level       = WARNING\r\n" +
+                "# Transaction.level         = WARNING\r\n" +
+                "# org.apache.activemq.level = SEVERE\r\n" +
+                "# org.apache.geronimo.level = SEVERE\r\n" +
+                "# openjpa.level             = WARNING\r\n" +
+                "# OpenEJB.cdi.level         = INFO\r\n" +
+                "# org.apache.webbeans.level = INFO\r\n" +
+                "# org.apache.openejb.level = FINE\r\n" +
+                "#\r\n" +
+                "# HANDLERS:\r\n" +
+                "# =========\r\n" +
+                "#\r\n" +
+                "# OpenEJB.handlers             = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# OpenEJB.options.handlers     = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# OpenEJB.server.handlers      = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# OpenEJB.startup.handlers     = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# OpenEJB.startup.service.handlers = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# OpenEJB.startup.config.handlers = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# OpenEJB.hsql.handlers        = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# CORBA-Adapter.handlers       = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# Transaction.handlers         = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# org.apache.activemq.handlers = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# org.apache.geronimo.handlers = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# openjpa.handlers             = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# OpenEJB.cdi.handlers         = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# org.apache.webbeans.handlers = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "# org.apache.openejb.handlers = 5tomee.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler\r\n" +
+                "#\r\n" +
+                "# TOMEE HANDLER SAMPLE:\r\n" +
+                "# =====================\r\n" +
+                "#\r\n" +
+                "# 5tomee.org.apache.juli.FileHandler.level = FINEST\r\n" +
+                "# 5tomee.org.apache.juli.FileHandler.directory = ${catalina.base}/logs\r\n" +
+                "# 5tomee.org.apache.juli.FileHandler.prefix = tomee.\r\n";
+        File loggingPropsFile = new File(confDir, "logging.properties");
+        String newLoggingProps = null;
+        if (!loggingPropsFile.exists()) {
+            newLoggingProps = openejbLoggingProps;
+        } else {
+            String loggingPropsOriginal = Installers.readAll(loggingPropsFile, alerts);
+            if (!loggingPropsOriginal.toLowerCase().contains("openejb")) {
+                // append our properties
+                newLoggingProps = loggingPropsOriginal +
+                        "\r\n\r\n" +
+                        openejbLoggingProps + "\r\n";
             }
-            if (newLoggingProps != null) {
-                if (Installers.writeAll(loggingPropsFile, newLoggingProps, alerts)) {
-                    alerts.addInfo("Append OpenEJB config to logging.properties");
-                }
+        }
+        if (newLoggingProps != null) {
+            if (Installers.writeAll(loggingPropsFile, newLoggingProps, alerts)) {
+                alerts.addInfo("Append OpenEJB config to logging.properties");
             }
         }
 
@@ -683,6 +656,10 @@ public class Installer {
                 systemPropertiesWriter.write("\n");
                 systemPropertiesWriter.write("# tomee.jaxws.subcontext = webservices\n");
                 systemPropertiesWriter.write("# tomee.jaxws.oldsubcontext = false\n");
+
+                systemPropertiesWriter.write("\n");
+                systemPropertiesWriter.write("# if you want to propagate a deployment on a cluster when a tomcat cluster is defined\n");
+                systemPropertiesWriter.write("# tomee.cluster.deployment = false\n");
 
                 systemPropertiesWriter.write("\n");
                 systemPropertiesWriter.write("# openejb.system.apps = true\n");
@@ -722,6 +699,14 @@ public class Installer {
                 systemPropertiesWriter.write("# javax.persistence.transactionType = \n");
                 systemPropertiesWriter.write("# javax.persistence.jtaDataSource = \n");
                 systemPropertiesWriter.write("# javax.persistence.nonJtaDataSource = \n");
+
+                systemPropertiesWriter.write("# These properties are only for cxf service (SOAP webservices) and TomEE+\n");
+                systemPropertiesWriter.write("# If you don't use special tricks and sun default implementation, uncommenting these 4 lines forces TomEE to use it without overhead at all = \n");
+                systemPropertiesWriter.write("#\n");
+                systemPropertiesWriter.write("# javax.xml.soap.MessageFactory = com.sun.xml.messaging.saaj.soap.ver1_1.SOAPMessageFactory1_1Impl\n");
+                systemPropertiesWriter.write("# javax.xml.soap.SOAPFactory = com.sun.xml.messaging.saaj.soap.ver1_1.SOAPFactory1_1Impl\n");
+                systemPropertiesWriter.write("# javax.xml.soap.SOAPConnectionFactory = com.sun.xml.messaging.saaj.client.p2p.HttpSOAPConnectionFactory\n");
+                systemPropertiesWriter.write("# javax.xml.soap.MetaFactory = com.sun.xml.messaging.saaj.soap.SAAJMetaFactoryImpl\n");
             } catch (IOException e) {
                 // ignored, this file is far to be mandatory
             } finally {
@@ -733,13 +718,11 @@ public class Installer {
                     }
                 }
             }
-
         }
 
         //
         // conf/web.xml
         //
-
         JarFile openejbTomcatCommonJar;
         try {
             openejbTomcatCommonJar = new JarFile(paths.geOpenEJBTomcatCommonJar());
@@ -752,30 +735,4 @@ public class Installer {
             alerts.addInfo("Set jasper in production mode in TomEE web.xml");
         }
     }
-
-    public static Object invokeStaticNoArgMethod(String className, String propertyName) {
-        try {
-            Class<?> clazz = loadClass(className, Installer.class.getClassLoader());
-            Method method = clazz.getMethod(propertyName);
-            return method.invoke(null, (Object[]) null);
-        } catch (Throwable e) {
-            return null;
-        }
-    }
-
-    public static Class<?> loadClass(String className, ClassLoader classLoader) throws ClassNotFoundException {
-        LinkedList<ClassLoader> loaders = new LinkedList<ClassLoader>();
-        for (ClassLoader loader = classLoader; loader != null; loader = loader.getParent()) {
-            loaders.addFirst(loader);
-        }
-        for (ClassLoader loader : loaders) {
-            try {
-                return Class.forName(className, true, loader);
-            } catch (ClassNotFoundException e) {
-                // no-op
-            }
-        }
-        return null;
-    }
-
 }
